--- a/doc/syntax_oldstyle.texi
+++ b/doc/syntax_oldstyle.texi
@@ -271,11 +271,14 @@ CPU- and output-module allow it):
       Conditionally assemble the following lines if <expression> is
       less than zero or equal.
 
-@item incbin <file>
+@item incbin <file>[,<offset>[,<nbytes>]]
       Inserts the binary contents of <file> into the object code at
-      this position. The file will be searched first in the current
-      directory, then in all paths defined by @option{-I} or @code{incdir}
-      in the order of occurence.
+      this position. When <offset> is specified, then the given number
+      of bytes will be skipped at the beginning of the file. The optional
+      <nbytes> argument specifies the maximum number of bytes to be read
+      from that file.
+      The file will be searched first in the current directory, then in all
+      paths defined by @option{-I} or @code{incdir} in the order of occurence.
 
 @item incdir <path>
       Add another path to search for include files to the list of
