Update vasm from original source http://sun.hasenbraten.de/vasm/daily/vasm.tar.gz

--- a/history
+++ b/history
@@ -41,6 +41,7 @@ o z80: Fixed crashes and internal errors when an expression creates an
   illegal relocation.
 o z80: Operands in parentheses were not allowed for defining data.
 o z80: A '#' prefix selects hexadecimal radix, as used in some assemblers.
+o z80: Fixed a bug with using invalid register-pairs in some addressing modes.
 o 6502: Improved detection of indirect addressing modes. (expr)+(expr) and
   (expr)+expr are no longer indirect.
 o mot-syntax: PhxAss-compatibility mode allows blanks in operands.
