Update vasm from original source http://sun.hasenbraten.de/vasm/daily/vasm.tar.gz

--- a/doc/vasm_main.texi
+++ b/doc/vasm_main.texi
@@ -290,6 +290,8 @@ Has to be provided completely by the syntax module.
     @item Miro Kropacek
     @item Mikael Kalms
     @item Matthew Hey
+    @item Romain Giot
+    @item Francois Galea
     @item Tom Duin
     @item Karoly Balogh
 @end itemize
