--- a/doc/interface.texi
+++ b/doc/interface.texi
@@ -253,7 +253,7 @@ was included or called.
 
 @subsection Sections
 
-One of the top level structures is linked list of sections describing
+One of the top level structures is a linked list of sections describing
 continuous blocks of memory. A section is specified by an object of
 type @code{section} with the following members that can be accessed by
 the modules:
@@ -290,7 +290,7 @@ the modules:
 
 @item  taddr pc;
         Current offset/program counter in this section. Can be used
-        while traversing through section. Has to be updated by a
+        while traversing through the section. Has to be updated by a
         module using it. Is set to @code{org} at the beginning.
 
 @item   uint32_t idx;
@@ -315,7 +315,7 @@ following members that can be accessed by the modules:.
         The symbol is imported from another file.
 
 @item #define EXPRESSION 3
-        The symbol is defined using an expressing.
+        The symbol is defined using an expression.
 @end table
 
 @item  uint32_t flags;
@@ -331,7 +331,7 @@ following members that can be accessed by the modules:.
         The symbol defines a function.
 
 @item #define TYPE_SECTION  3
-        The symbl defines a section.
+        The symbol defines a section.
 
 @item #define TYPE_FILE     4
       The symbol defines a file.  
@@ -409,6 +409,9 @@ typedef struct atom @{
     int srcline;
     char *ptext;
     expr *pexpr;
+    expr *roffs;
+    taddr *rorg;
+    assertion *assert;
   @} content;
 @} atom;
 @end example
@@ -581,7 +584,27 @@ case of a @code{PRINTEXPR}-atom.
 
 @item    expr *roffs;
 (In union @code{content}.) The expression holds the relative section offset
-to align to in case of a @code{RORG}-atom.
+to align to in case of a @code{ROFFS}-atom.
+
+@item    taddr *rorg;
+(In union @code{content}.) Assemble the code under the base address in
+@code{rorg} in case of a @code{RORG}-atom.
+
+@item    assertion *assert;
+(In union @code{content}.) Pointer to an assertion structure in the case of
+an @code{ASSERT}-atom. Contains the following elements:
+@table @code
+@item expr *assert_exp;
+Pointer to an expression which should evaluate to non-zero.
+
+@item char *exprstr;
+Pointer to the expression as text (to be used in the output).
+
+@item char *msgstr;
+Pointer to the message, which would be printed when @code{assert_exp} evaluates
+to zero.
+
+@end table
 
 @end table
 
@@ -695,7 +718,8 @@ must be written.
 
 @item #define ISIDSTART(x)/ISIDCHAR(x)
 These macros should return non-zero if and only if the argument is a
-valid character to start and identifier/inside an identifier respectively.
+valid character to start an identifier or a valid character inside an
+identifier, respectively.
 @code{ISIDCHAR} must be a superset of @code{ISIDSTART}.
 
 @item #define CHKIDEND(s,e) chkidend((s),(e))
@@ -812,10 +836,6 @@ should be @code{static} to prevent name clashes) in @code{cpu.h}:
 @item #define MAX_OPERANDS 3
 Maximum number of operands of one instruction.
 
-@item #define CPU_CHECKS_OPCNT 0
-When non-zero, @code{parse_operand()} is called with an arbitrary number
-of operands, and it is the task of the cpu module to check it.
-
 @item #define MAX_QUALIFIERS 0
 Maximum number of mnemonic-qualifiers per mnemonic.
 
@@ -877,11 +897,10 @@ Usually vasm will start another assembler pass when a label changed its
 value. With complex optimizers (e.g. M68k) it can happen that the effect
 from optimizations and translations of instructions is nullified, so the
 labels do not change. @code{CHECK_ATOMSIZE} will remember the sizes of
-all atoms from the previous pass and check them for changes, which is
+all atoms from the previous pass and checks them for changes, which is
 much safer but requires more resources.
-@end table
 
-@item #define MEMONIC_VALID(i)
+@item #define MNEMONIC_VALID(i)
 An optional function with the arguments @code{(int idx)}. Returns true
 when the mnemonic with index @code{idx} is valid for the current state of
 the backend (e.g. it is available for the selected cpu architecture).
@@ -891,6 +910,7 @@ When defined, this is a function with the arguments
 @code{(operand *op,int type)}, which returns true when the given operand
 type (@code{type}) is optional. The function is only called for missing
 operands and should also initialize @code{op} with default values (e.g. 0).
+@end table
 
 Implementing additional target-specific unary operations is done by defining
 the following optional macros:
@@ -1029,7 +1049,7 @@ several output modules are linked into one vasm executable and their
 structure differs somewhat from syntax and cpu modules.
 
 Usually, an output module for some object format @code{fmt} should be contained
-in a file @file{output_fmt.c} (it may use/include other files if necessary).
+in a file @file{output_<fmt>.c} (it may use/include other files if necessary).
 To automatically include this format in the build process, the @file{make.rules}
 has to be extended. The module should be added to the @code{OBJS} variable
 at the start of @file{make.rules}. Also, a dependency line should be added
@@ -1075,7 +1095,8 @@ At last, a call to the @code{output_init_<fmt>} has to be added in the
 @code{init_output()} function in @file{vasm.c} (should be self-explanatory).
 
 Some remarks:
-@table @minus
+@itemize @minus
+
 @item
 Some output modules can not handle all supported CPUs. Nevertheless,
 they have to be written in a way that they can be compiled. If code
@@ -1101,7 +1122,7 @@ module should try to find appropriate relocations supported by the
 object format. The goal is to avoid special CPU specific
 relocations as much as possible.
 
-@end table
+@end itemize
 
 Volker Barthelmann                                      vb@@compilers.de
 
